--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,9 +7,8 @@
     <script src="https://cdn.jsdelivr.net/npm/vue-resource@1.5.1"></script>
 </head>
 <body>
-    <div id="app">
-        {{ messages }}
-    </div>
+    <h3 align="center">VarMetrics</h3>
+    <div id="app"></div>
     <script src="js/main.js"></script>
 </body>
 </html>
